moved IR ID generation to Message parsing where field associations for group/count data/length are done. Added forward and back referencing to IR IDs. FLushed out group IR generation.